Closed Bug 408023 Opened 17 years ago Closed 17 years ago

The indicator doesn't look disabled in a disabled check menu item

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: ventnor.bugzilla, Assigned: ventnor.bugzilla)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
In the Library, you cannot remove the Name column which is represented by a disabled check menu item on the column menu to the top-right corner of the treeview. But the check doesn't adopt the state so it doesn't look disabled. For accessibility and just plain polish, we should fix this.
Attachment #292721 - Flags: superreview?(roc)
Attachment #292721 - Flags: review?(roc)
Attachment #292721 - Flags: superreview?(roc)
Attachment #292721 - Flags: superreview+
Attachment #292721 - Flags: review?(roc)
Attachment #292721 - Flags: review+
Attachment #292721 - Flags: approval1.9?
Attachment #292721 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in widget/src/gtk2/gtk2drawing.c; /cvsroot/mozilla/widget/src/gtk2/gtk2drawing.c,v <-- gtk2drawing.c new revision: 1.50; previous revision: 1.49 done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: