Bug 408023 - "The indicator doesn't look disabled in a disabled check menu item" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=schrep]